# th-gd

./: th-gd.cabal
Generics/Deriving/TH/: Case.hs
Language/Haskell/TH/: Generics.hs
