name: th-gd
version: 1.0

build-type: Simple

category: Template Haskell, Generics

author: nicolas.frisby@gmail.com
maintainer: nicolas.frisby@gmail.com

stability: experimental

synopsis: generic-deriving instances for the Template Haskell AST
description: generic-deriving instances for the Template Haskell AST

license: BSD3

cabal-version: >= 1.2

library
  build-depends: base >= 4 && < 5, template-haskell, containers

  build-depends: generic-deriving

  exposed-modules: Language.Haskell.TH.Generics, Generics.Deriving.TH.Case
